// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`evaluates component interpolations 1`] = `
"const {
  styled
} = require('../react');

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\"
});
const Paragraph =
/*#__PURE__*/
styled(\\"p\\")({
  name: \\"Paragraph\\",
  class: \\"Paragraph_p1rsdnkv\\"
});"
`;

exports[`evaluates component interpolations 2`] = `

CSS Text: .Title_t1xha7dm{color:red;}
.Paragraph_p1rsdnkv .Title_t1xha7dm{color:blue;}

Dependencies: ../react

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":3,"column":6},"name":".Title_t1xha7dm"},{"generated":{"line":2,"column":0},"original":{"line":7,"column":6},"name":".Paragraph_p1rsdnkv"}]

`;

exports[`evaluates expressions with dependencies 1`] = `
"import slugify from '../slugify';
const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\"
});"
`;

exports[`evaluates expressions with dependencies 2`] = `

CSS Text: .Title_t1xha7dm:before{content:"6og6jy";}

Dependencies: ../slugify

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":3,"column":6},"name":".Title_t1xha7dm"}]

`;

exports[`evaluates expressions with expressions depending on shared dependency 1`] = `
"const slugify = require('../slugify');

const boo = t => slugify(t) + 'boo';

const bar = t => slugify(t) + 'bar';

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\"
});"
`;

exports[`evaluates expressions with expressions depending on shared dependency 2`] = `

CSS Text: .Title_t1xha7dm:before{content:"6og6jyboo6og6jybar";}

Dependencies: ../slugify

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":6,"column":6},"name":".Title_t1xha7dm"}]

`;

exports[`evaluates identifier in scope 1`] = `
"const answer = 42;

const foo = () => answer;

const days = foo() + ' days';
const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\"
});"
`;

exports[`evaluates identifier in scope 2`] = `

CSS Text: .Title_t1xha7dm:before{content:"42 days";}

Dependencies: NA

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":5,"column":6},"name":".Title_t1xha7dm"}]

`;

exports[`evaluates local expressions 1`] = `
"const answer = 42;

const foo = () => answer;

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\"
});"
`;

exports[`evaluates local expressions 2`] = `

CSS Text: .Title_t1xha7dm:before{content:"42 days";}

Dependencies: NA

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":4,"column":6},"name":".Title_t1xha7dm"}]

`;

exports[`evaluates multiple expressions with shared dependency 1`] = `
"const slugify = require('../slugify');

const boo = t => slugify(t) + 'boo';

const bar = t => slugify(t) + 'bar';

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\"
});"
`;

exports[`evaluates multiple expressions with shared dependency 2`] = `

CSS Text: .Title_t1xha7dm:before{content:"6og6jyboo" content:"6og6jybar";}

Dependencies: ../slugify, ../slugify

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":6,"column":6},"name":".Title_t1xha7dm"}]

`;

exports[`ignores external expressions 1`] = `
"const generate = props => props.content;

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\",
  vars: {
    \\"t1xha7dm-0\\": [generate]
  }
});"
`;

exports[`ignores external expressions 2`] = `

CSS Text: .Title_t1xha7dm:before{content:"var(--t1xha7dm-0)";}

Dependencies: NA

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":3,"column":6},"name":".Title_t1xha7dm"}]

`;

exports[`ignores inline arrow function expressions 1`] = `
"const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\",
  vars: {
    \\"t1xha7dm-0\\": [props => props.content]
  }
});"
`;

exports[`ignores inline arrow function expressions 2`] = `

CSS Text: .Title_t1xha7dm:before{content:"var(--t1xha7dm-0)";}

Dependencies: NA

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":1,"column":6},"name":".Title_t1xha7dm"}]

`;

exports[`ignores inline vanilla function expressions 1`] = `
"const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\",
  vars: {
    \\"t1xha7dm-0\\": [function (props) {
      return props.content;
    }]
  }
});"
`;

exports[`ignores inline vanilla function expressions 2`] = `

CSS Text: .Title_t1xha7dm:before{content:"var(--t1xha7dm-0)";}

Dependencies: NA

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":1,"column":6},"name":".Title_t1xha7dm"}]

`;

exports[`inlines object styles as CSS string 1`] = `
"const fill = (top = 0, left = 0, right = 0, bottom = 0) => ({
  position: 'absolute',
  top,
  right,
  bottom,
  left
});

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_t1xha7dm\\"
});"
`;

exports[`inlines object styles as CSS string 2`] = `

CSS Text: .Title_t1xha7dm{position:absolute;top:0;right:0;bottom:0;left:0;}

Dependencies: NA

Mappings: [{"generated":{"line":1,"column":0},"original":{"line":9,"column":6},"name":".Title_t1xha7dm"}]

`;

exports[`throws codeframe error when evaluation fails 1`] = `
"<<DIRNAME>>/source.js: An error occurred when evaluating the expression: This will fail. Make sure you are not using a browser or Node specific API.
[0m [90m 2 | [39m[0m
[0m [90m 3 | [39m[36mconst[39m [33mTitle[39m [33m=[39m styled[33m.[39mh1[32m\`[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m[32m  font-size: \${foo()}px;[39m[0m
[0m [90m   | [39m               [31m[1m^[22m[39m[0m
[0m [90m 5 | [39m[32m\`[39m[33m;[39m[0m"
`;
